--- a/Fatima 2409A E Project.css
+++ b/Fatima 2409A E Project.css
@@ -7,7 +7,7 @@ body {
 .container {
     max-width: 1100px;
     margin: auto;
-    background: white;
+    background: rgb(155, 80, 18);
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
@@ -17,7 +17,20 @@ body {
 .navbar {
     background: #be7c00;
 }
-.navbar-brand, .navbar-nav .nav-link {
+.navbar-brand{
+    font-weight: bolder;
+    color: #000000;
+    position: absolute;
+    top: 0;
+    font-size: xx-large;
+    box-shadow: #f0a110;
+    text-decoration: double;
+}
+ .navbar-nav .nav-link {
+    font-weight: bolder;
+    font-size: x-large;
+    border-radius: 50px;
+    background-color: #000000;
     color: white;
 }
 
@@ -52,7 +65,7 @@ body {
 
 }
 .gallery-section{
-  background-color: #6d0101;
+  background-color: #f0a110;
   color: #f4f4f4;
 }
 
@@ -114,7 +127,7 @@ body {
 .contact-section h2 {
     text-align: center;
     color: #ffffff;
-    font-weight:bold ;
+    font-weight:bold;
 }
 .contact-form {
     display: flex;
